@@ -341,6 +341,8 @@ NEW FEATURES
 
 	stars() now returns the locations invisibly.
 
+    o	contour() is now generic.
+
 
 DOCUMENTATION CHANGES
 
@@ -471,7 +473,7 @@ BUG FIXES
     o	integer(2^30+1) and similar ones do not segfault anymore but duly
 	report allocation errors.
 
-    o	seq(0,0,1) now works (PR#1133).
+    o	seq(0, 0, 1) now works (PR#1133).
 
     o   reshapeWide() got it wrong if the "i" factor was not sorted (the
         function is now deprecated since reshape() is there, but the bug
